tests/NormalTests/paczka2/big_fuzzy/22904038.err
Error in line 3: 86FX5BIqv4S A773 25,8
Error in line 4: 86FX5BIqv4S S364 51,2
Error in line 2: RIcD2AStuZS A177 79,2
Error in line 6: 86FX5BIqv4S A177 61,2
Error in line 12: A773 S987 27,73
Error in line 14: 8whDWYPcu2i S987 56,3
Error in line 18: 8whDWYPcu2i A177 73,3
Error in line 9: A773 S987 11,6
Error in line 33: RIcD2AStuZS S364 36,5
Error in line 43: 8whDWYPcu2i S987 -3,9
Error in line 41: C9kz7 S364 100,0
Error in line 46: C9kz7 A177 54,9
Error in line 62: rW85kR A177 44,0
Error in line 58: 86FX5BIqv4S S987 42,3
Error in line 57: 8whDWYPcu2i S987 139,5
Error in line 84: RIcD2AStuZS S987 78,0
Error in line 85: 86FX5BIqv4S S364 8,0
Error in line 96: 86FX5BIqv4S S987 61,0
Error in line 102: 86FX5BIqv4S A773 10',8
Error in line 114: C9kz7 S364 37,17
Error in line 99: 86FX5BIqv4S A773 26,2
Error in line 120: Rhxo S364 90,2
Error in line 118: RIcD2AStuZS S364 25,6
Error in line 121: Rhxo A773 80,6
Error in line 135: C9kz7 S364 -1,9
Error in line 136: 86FX5BIqv4S A177 64,4
Error in line 133: Rhxo S987 19,8
Error in line 140: Rhxo A177 80,0
Error in line 141: Rhxo A773 34,7
Error in line 145: Rhxo S364 30,1
Error in line 157: RIcD2AStuZS A773 52,1
Error in line 147: 86FX5BIqv4S S987 67,7
Error in line 166: A773 A177 54,6
Error in line 183: RIcD2AStuZS A773 56,5
Error in line 186: RIcD2AStuZS S364 45,1
Error in line 189: rW85kR A773 62,2
Error in line 190: rW85kR S364 42,4
Error in line 196: Rhxo A773 51,7
Error in line 195: A773 A177 18,0
Error in line 201: A773 S364 12,2
Error in line 200: RIcD2AStuZS A177 215,5
Error in line 211: RIcD2AStuZS A773 9,9
Error in line 216: A773 S987 97,6
Error in line 220: C9kz7 S987 -1,6
Error in line 219: 86FX5BIqv4S S364 13,9
Error in line 233: A773 S987 6,7
Error in line 240: 86FX5BIqv4S S987 86,0
Error in line 247: 86FX5BIqv4S A773 69,1
